--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     padding: 3%;
     border: 1px;
     width: 100%;
-    margin-top: 20pt;
+    vertical-align: 20pt;
   }
 
   .description p {
