--- a/style.css
+++ b/style.css
@@ -53,14 +53,19 @@ body {
     margin-top: 15pt;
   }
 
+  .courses {
+    display: table-row;
+  }
+
   .course-code {
-    display: table-column;
+    display: table-cell;
+    font-weight: bold;
     padding: 3%;
     border: 2px solid #000000;
     vertical-align: top;
   }
 
   .course-desc {
-    display: table-row;
+    display: table-cell;
     vertical-align: top;
   }
