--- a/style.css
+++ b/style.css
@@ -67,5 +67,7 @@ body {
 
   .course-desc {
     display: table-cell;
+    padding: 3%;
+    border: 2px solid #000000;
     vertical-align: top;
   }
