--- a/style.css
+++ b/style.css
@@ -77,4 +77,5 @@ body {
     padding: 3%;
     border: 2px solid #000000;
     background-color: rgb(110, 194, 222);
+    box-sizing: border-box;
   }
