--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     color: #414141;
   }
 
-  .UniLeeds {
+  div.UniLeeds {
     padding: 3%;
     border: 2px solid #000000;
     background-color: rgb(110, 194, 222);
