--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     color: #414141;
   }
 
-  div.UniLeeds {
+  .UniLeeds {
     padding: 3%;
     border: 3px solid #000000 !important;
     box-sizing: border-box;
