--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ body {
   }
 
   .UniLeeds {
-    padding: 3%;
-    border: 3px solid #000000 !important;
+    padding: 1%;
+    border: 2pt solid #000000;
     box-sizing: border-box;
   }
 
