--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     padding: 1%;
     border: 2pt solid #000000;
     box-sizing: border-box;
-    margin-left: -10;
+    margin-left: -10pt;
   }
 
   .course-highlights {
