--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
     padding: 1%;
     border: 2pt solid #000000;
     box-sizing: border-box;
+    background-color: aliceblue;
     margin-left: -10pt;
   }
 
