--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     padding: 1%;
     border: 2pt solid #000000;
     box-sizing: border-box;
-    background-color: aliceblue;
+    background-color: rgb(194, 226, 255);
     margin-left: -10pt;
   }
 
