--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
-    background-color: lightblue;
+    background-color: rgb(197, 222, 231);
     color: rgb(10, 1, 80);
     margin: 15pt;
   }
