--- a/style.css
+++ b/style.css
@@ -88,36 +88,37 @@ body {
 }
 
   nav {
-    display: flex;
-    background-color: #333;
+  display: flex;
+  justify-content: space-around;
+  background-color: #333;
 }
 
   nav li {
-    position: relative;
-    margin-right: 20px;
+  position: relative;
 }
 
   nav a {
-    color: white;
-    text-decoration: none;
-    padding: 15px;
-    display: block;
+  color: white;
+  text-decoration: none;
+  padding: 15px 20px;
+  display: block;
 }
 
   nav a:hover {
-    background-color: #555;
+  background-color: #555;
 }
 
   nav ul ul {
-    display: none;
-    position: absolute;
-    background-color: #444;
+  display: none;
+  position: absolute;
+  background-color: #444;
+  left: 0;
 }
 
   nav li:hover > ul {
-    display: block;
+  display: block;
 }
 
   nav ul ul li {
-    margin: 0;
+  margin: 0;
 }
