--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     text-decoration: none;
   }
 
-  a.courselink:active {
+  a.courselinks:active {
     color: #2c2c2c;
     text-decoration: none;
   }
