--- a/style.css
+++ b/style.css
@@ -144,3 +144,10 @@ body {
   ul li a.hovered {
   color: rgb(255, 255, 255);
 }
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+}
