--- a/style.css
+++ b/style.css
@@ -180,10 +180,27 @@ footer {
 }
 
 .large-text, .large-text p, .large-text h1, .large-text h2, .large-text h3 {
-  font-size: 120%;
+  font-size: 150%;
 }
 
 .accessible-color, .accessible-color p, .accessible-color h1, .accessible-color h2, .accessible-color h3, .accessible-color a.courselinks {
   background-color: #003366;
   color: #FFFF99;
 }
+
+.myImages {
+  display: flex;
+  gap: 20px;
+}
+
+.image-container {
+  text-align: center;
+}
+
+.image-container img {
+    width: 200px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
